[package]
name = "twamm-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.27.0"
anchor-lang = { version = "0.27.0", features = ["derive"] }
anchor-spl = "0.27.0"
clap = { version = "4.2.5", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
twamm = { version = "0.1.0", path = "../programs/twamm" }
