[package]
name = "solana-twamm"
version = "0.1.0"
description = "Permissionless TWAMM"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_twamm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test = []
default = []

[dependencies]
anchor-lang = {version = "0.25.0", features = ["init-if-needed"]}
anchor-spl = "0.25.0"
solana-program = "1.10.29"
solana-security-txt = "1.0.1"
pyth-sdk-solana = "0.4.2"
ahash = "0.7.6"
num-traits = "0.2.14"
num = "0.4.0"